Aded container and overflow fix

--- a/TarankoWebSite/wwwroot/css/about-me.css
+++ b/TarankoWebSite/wwwroot/css/about-me.css
@@ -1,6 +1,5 @@
 ﻿.about__container {
-    margin-right: 120px;
-    margin-left: 120px;
+    margin: 0 20vw;
 }
 .about-page__title1,
 .about-page__title2 {
